--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,9 @@ header form select {
   border: solid 1px rgba(53, 50, 66, 0.863);
   letter-spacing: 1px;
   color: rgba(230, 207, 245, 0.644);
+  border-radius: 0.1rem;
   padding: 0.5rem;
+  width: 140px;
   margin: 1px;
   -webkit-transition: 0.1s ease-in-out;
   transition: 0.1s ease-in-out;
@@ -98,13 +100,13 @@ header form button {
   letter-spacing: 1px;
   margin-left: 3px;
   border: solid 1px rgba(53, 50, 66, 0.863);
-}
-
-header form button:hover {
-  border: solid 1px rgba(179, 95, 235, 0.582);
-  color: rgba(226, 192, 248, 0.959);
-  -webkit-transition: 0.2s ease;
-  transition: 0.2s ease;
+  border: none;
+  color: #e6cff5;
+  border-radius: 0.1rem;
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
 }
 
 header .search-container {
@@ -230,6 +232,7 @@ main .pagination button {
   cursor: pointer;
   background-color: transparent;
   border: solid 2px rgba(168, 83, 224, 0.233);
+  border: solid 2px #8e33d3;
   font-size: 1rem;
   margin: 0.2rem;
   border-radius: 6rem;
@@ -240,7 +243,7 @@ main .pagination button {
 }
 
 main .pagination button:hover {
-  background-color: rgba(168, 83, 224, 0.233);
+  background-color: rgba(168, 83, 224, 0.356);
   color: #f0e9e9;
 }
 
@@ -248,8 +251,8 @@ main .movies-filter,
 main #popular-movies {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 2rem;
   grid-row-gap: 2rem;
   margin-top: 1rem;
@@ -261,12 +264,12 @@ main .img-container {
 
 main .img-container .details-btn {
   background-color: rgba(158, 61, 238, 0.096);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(54, 51, 51, 0.068)), to(rgba(113, 34, 165, 0.281)));
-  background-image: linear-gradient(rgba(54, 51, 51, 0.068), rgba(113, 34, 165, 0.281));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(27, 24, 29, 0.342)), to(rgba(30, 25, 32, 0.555)));
+  background-image: linear-gradient(rgba(27, 24, 29, 0.342), rgba(30, 25, 32, 0.555));
   position: absolute;
   top: 0;
   bottom: 0;
-  height: 98.5%;
+  height: 98.8%;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -285,18 +288,29 @@ main .img-container .details-btn {
 }
 
 main .img-container .details-btn button {
-  background-color: rgba(158, 61, 238, 0.979);
+  background-color: #9d44e2;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
   border: none;
-  padding: 0.8rem;
+  padding: 0.8rem 2rem;
   position: absolute;
-  bottom: 25px;
-  color: #eee1f8;
+  bottom: 0;
+  opacity: 0;
+  border-radius: 0.1rem;
+  color: #e6cff5;
   letter-spacing: 1px;
-  border-radius: 0.2rem;
+  font-size: 0.8rem;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 main .img-container:hover .details-btn {
   opacity: 1;
+}
+
+main .img-container:hover button {
+  opacity: 1;
+  bottom: 25px;
 }
 
 main .movie-item {
@@ -315,6 +329,7 @@ main .movie-item {
 
 main .movie-item .movie-title {
   margin-top: 0.5rem;
+  font-size: 0.9rem;
   text-align: center;
   color: rgba(226, 192, 248, 0.836);
 }
@@ -333,6 +348,7 @@ main .movie-item .movie-rating {
 
 main .movie-item .movie-rating p {
   font-size: 0.8rem;
+  letter-spacing: 1px;
 }
 
 main .movie-item .movie-rating i {
@@ -379,15 +395,54 @@ main #upcoming-slide .swiper-button-next {
 }
 
 main #popular-container {
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
-main #filtered-movies .title-section {
+main #filtered-movies {
+  margin-top: 10%;
+}
+
+main #filtered-movies #genre {
+  margin-right: 0.1rem;
+}
+
+main #filtered-movies .name-value,
+main #filtered-movies .item-searched {
+  position: relative;
+  width: 100%;
   display: none;
+  border-bottom: solid 1px rgba(38, 38, 48, 0.37);
+}
+
+main #filtered-movies .name-value .title-searched,
+main #filtered-movies .item-searched .title-searched {
+  font-family: "Bebas Neue", cursive;
+  color: #eee1f8;
+  letter-spacing: 1pxs;
+  font-size: 2rem;
+  margin-right: 10px;
+}
+
+main #filtered-movies .name-value .texts,
+main #filtered-movies .item-searched .texts {
+  position: absolute;
+  left: 215px;
+  bottom: 15px;
+}
+
+main #filtered-movies #genre,
+main #filtered-movies #filter,
+main #filtered-movies #movie-name {
+  padding: 0.5rem 1rem;
+  border-radius: 3rem;
+  color: #eee1f8;
+  font-size: 0.9rem;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
 }
 
 main .movies-filter {
-  margin-top: 5%;
+  margin-top: 3%;
 }
 
 #movie-banner {
@@ -420,12 +475,14 @@ main .movies-filter {
   letter-spacing: 1px;
   font-size: 0.9rem;
   background-color: transparent;
-  border: solid 1px rgba(53, 50, 66, 0.863);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
   padding: 0.5rem 1rem;
 }
 
 #movie-detail {
   margin-top: 10%;
+  height: 100vh;
   z-index: 10;
   position: relative;
   display: -webkit-box;
@@ -442,7 +499,6 @@ main .movies-filter {
 }
 
 #movie-detail .poster-movie {
-  position: relative;
   width: 100%;
 }
 
@@ -454,13 +510,17 @@ main .movies-filter {
 
 #movie-detail .poster-movie img {
   max-width: 80%;
-  margin-top: -35%;
+  width: 500px;
+  position: absolute;
+  top: -80px;
 }
 
 #movie-detail .poster-movie .bgimg {
   position: absolute;
   right: 105px;
+  left: 35px;
   top: -155px;
+  top: -6px;
   background-color: #9e3dee;
   border-radius: 0.1rem;
   background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(167, 70, 247, 0.856)), to(#3c1068));
@@ -514,8 +574,8 @@ main .movies-filter {
 #movie-detail .details-container .similar-movies {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  -ms-grid-columns: (minmax(100px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   grid-gap: 2rem;
   width: 520px;
   margin-top: 0.5rem;
@@ -525,11 +585,27 @@ main .movies-filter {
   width: 150px;
 }
 
+.reviews-section .title-section {
+  border-bottom: none;
+}
+
 .movie-reviews {
-  background-color: #0e0e11;
+  background-color: #1e1e3d;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#150c1a), to(rgba(46, 18, 80, 0.788)));
+  background-image: linear-gradient(to bottom right, #150c1a, rgba(46, 18, 80, 0.788));
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#150e18), to(rgba(10, 7, 12, 0.788)));
+  background-image: linear-gradient(to bottom right, #150e18, rgba(10, 7, 12, 0.788));
   border: solid 1px #121218;
   padding: 4rem;
-  margin-top: 5rem;
+  margin-top: 1rem;
+  height: 500px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.movie-reviews ::-webkit-scrollbar {
+  width: 120px;
+  background-color: red;
 }
 
 .movie-reviews h1 {
@@ -555,7 +631,8 @@ main .movies-filter {
 }
 
 .movie-reviews div {
-  margin-top: 3rem;
+  margin-top: 0rem;
+  margin-bottom: 3rem;
 }
 
 footer {
