--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,9 @@ header {
       border: solid 1px rgba(53, 50, 66, 0.863);
       letter-spacing: 1px;
       color: rgba(230, 207, 245, 0.644);
+      border-radius: 0.1rem;
       padding: 0.5rem;
+      width: 140px;
       margin: 1px;
       transition: 0.1s ease-in-out;
       &:hover {
@@ -83,11 +85,13 @@ header {
       letter-spacing: 1px;
       margin-left: 3px;
       border: solid 1px rgba(53, 50, 66, 0.863);
-      &:hover {
-        border: solid 1px rgba(179, 95, 235, 0.582);
-        color: rgba(226, 192, 248, 0.959);
-        transition: 0.2s ease;
-      }
+      border: none;
+      color: rgb(230, 207, 245);
+      border-radius: 0.1rem;
+      letter-spacing: 1px;
+      font-size: 0.8rem;
+      // background-color: rgb(158, 61, 238);
+      background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
     }
   }
 
@@ -167,6 +171,7 @@ main {
   margin-top: -6%;
 
 
+
   //movie imgs
   img {
     max-width: 100%;
@@ -205,6 +210,7 @@ main {
       cursor: pointer;
       background-color: transparent;
       border: solid 2px rgba(168, 83, 224, 0.233);
+      border: solid 2px rgb(142, 51, 211);
       font-size: 1rem;
       margin: 0.2rem;
       border-radius: 6rem;
@@ -213,7 +219,7 @@ main {
       width: 40px;
       height: 40px;
       &:hover {
-        background-color: rgba(168, 83, 224, 0.233);
+        background-color: rgba(168, 83, 224, 0.356);
         color: rgb(240, 233, 233);
       }
     }
@@ -223,24 +229,29 @@ main {
   .movies-filter,
   #popular-movies {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 2rem;
     grid-row-gap: 2rem;
     margin-top: 1rem;
+    // img{
+    //   width: 100px;
+    // }
   }
 
   .img-container{
     position: relative;
+    // width: 100px;
     
     .details-btn{
       background-color: rgba(158, 61, 238, 0.096);
-      background-image: linear-gradient(rgba(54, 51, 51, 0.068),rgba(113, 34, 165, 0.281));
+      background-image: linear-gradient(rgba(27, 24, 29, 0.342),rgba(30, 25, 32, 0.555));
       position: absolute;
       top: 0;
       bottom: 0;
       // left: 0;
       // right: 0;
-      height: 98.5%;
+      height: 98.8%;
+      // height: 100%;
       width: 100%;
       display: flex;
       flex-direction: column;
@@ -250,22 +261,29 @@ main {
       transition: 0.3s ease;
 
       button{
-        background-color: rgba(158, 61, 238, 0.979);
+        background-color: rgb(157, 68, 226);
+        background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
         border: none;
-        padding: 0.8rem;
+        padding: 0.8rem 2rem;
         position: absolute;
-        bottom: 25px;
-        color: rgb(238, 225, 248);
-        // text-transform: uppercase;
+        bottom: 0;
+        opacity: 0;
+        border-radius: 0.1rem;
+        color: rgb(230, 207, 245);
         letter-spacing: 1px;
-        // font-weight: bold;
-        border-radius: 0.2rem;
+        font-size: 0.8rem;
+        transition: 0.3s ease;
       }
     }
 
     &:hover .details-btn{
       opacity: 1;
     }    
+
+    &:hover button{
+      opacity: 1;
+      bottom: 25px;
+    }
   }
 
   //movies style
@@ -278,6 +296,7 @@ main {
 
     .movie-title {
       margin-top: 0.5rem;
+      font-size: 0.9rem;
       text-align: center;
       color: rgba(226, 192, 248, 0.836);
     }
@@ -293,6 +312,7 @@ main {
 
       p {
         font-size: 0.8rem;
+        letter-spacing: 1px;
       }
 
       i {
@@ -337,18 +357,61 @@ main {
 
   //popular movies
   #popular-container {
-    margin-top: 5%;
+    margin-top: 2%;
   }
 
   //Filtered movies
   #filtered-movies{
-    .title-section{
-      display: none;
+    margin-top: 10%;
+
+
+    #genre{
+      margin-right: 0.1rem;
     }
+
+    .name-value,
+    .item-searched{
+      position: relative;
+      width: 100%;
+      display: none;
+      border-bottom: solid 1px rgba(38, 38, 48, 0.37);
+      .title-searched{
+        font-family: "Bebas Neue", cursive;
+        color: rgb(238, 225, 248);
+        letter-spacing: 1pxs;
+        font-size: 2rem;
+        margin-right: 10px;
+      }
+
+      .texts{
+        position: absolute;
+        left: 215px;
+        bottom: 15px;
+      }
+    }
+
+
+    #genre,
+    #filter,
+    #movie-name{
+      // background-color: red;
+      // border: solid 2px rgb(157, 68, 226);
+      // font-family: "Bebas Neue", cursive;
+      // letter-spacing: 0.1rem;
+      padding: 0.5rem 1rem;
+      border-radius: 3rem;
+      color:rgb(238, 225, 248);
+      font-size: 0.9rem;
+      // font-size: 1rem;
+      background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
+    }
+  
+    // .title-section{
+    //   display: none;
+    // }
   }
   .movies-filter {
-    margin-top: 5%;
-
+    margin-top: 3%;
   }
 }
 
@@ -375,22 +438,29 @@ a{
   letter-spacing: 1px;
   font-size: 0.9rem;
   background-color: transparent;
-  border: solid 1px rgba(53, 50, 66, 0.863);
+  // border: solid 1px rgba(53, 50, 66, 0.863);
+  background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
   padding: 0.5rem 1rem;
 }
 }
 
 #movie-detail{
   margin-top: 10%;
+  height: 100vh;
   z-index: 10;
   position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  
 
   ul{
     list-style: none;
   }
 
   .poster-movie{
-    position: relative;
+    // position: absolute;
+    // top: -100px;
     width: 100%;
     span{
       position: absolute;
@@ -400,28 +470,25 @@ a{
 
     img{
       max-width: 80%;
-      margin-top: -35%;
+      width: 500px;
+      // margin-top: -35%;
+      position: absolute;
+      top: -80px;
     }
     .bgimg{
       position: absolute;
       right: 105px;
+      left: 35px;
       top: -155px;
+      top: -6px;
       background-color: rgb(158, 61, 238);
       border-radius: 0.1rem;
-      // border-radius: 2rem;
-      // background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
       background-image:  linear-gradient(to bottom right, rgba(167, 70, 247, 0.856), rgb(60, 16, 104));
       width: 490px;
-      // width: 100%;
       height: 700px;
       z-index: -1;
     }
   }
-
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  
 
   .details-container{
     // margin-top: 10%;
@@ -471,7 +538,7 @@ a{
 
     .similar-movies{
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
       grid-gap: 2rem;
       width: 520px;
       margin-top: 0.5rem;
@@ -485,33 +552,31 @@ a{
 
   }
 }
-//similar-movies
-// .similar-container{
-//   margin-top: 5%;
-//   width: 100%;
-
-// }
-// .similar-movies{
-//   display: grid;
-//   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-//   grid-gap: 2rem;
-//   width: 520px;
-//   margin-top: 1rem;
-//   div{
-//     img{
-//       width: 170px;
-//     }
-//   }
-// }
-
 
 
 //movie reviews
+.reviews-section{
+  .title-section{
+    border-bottom: none;
+  }
+}
+
 .movie-reviews{
-  background-color: rgb(14, 14, 17);
+  background-color: rgb(30, 30, 61);
+  background-image:  linear-gradient(to bottom right, rgb(21, 12, 26), rgba(46, 18, 80, 0.788));
+  background-image:  linear-gradient(to bottom right, rgb(21, 14, 24), rgba(10, 7, 12, 0.788));
   border: solid 1px rgb(18, 18, 24);;
   padding: 4rem;
-  margin-top: 5rem;
+  margin-top: 1rem;
+  height: 500px;
+  overflow: scroll;
+  overflow-x: hidden;
+
+  ::-webkit-scrollbar {
+    width: 120px;
+    background-color: red;
+  }
+
   h1{
     margin-bottom: 1rem;
   }
@@ -532,7 +597,8 @@ a{
   }
   
   div{
-    margin-top: 3rem;
+    margin-top: 0rem;
+    margin-bottom: 3rem;
   }
 }
 
